[package]
name = "kifuwarabe_connect_four"
version = "0.1.0"
authors = ["むずでょ <muzudho1@gmail.com>"]
edition = "2018"
description = """
WIP. Connect-four AI. Currently, does not work.  
"""
readme = "README.md"
repository = "https://github.com/muzudho/kifuwarabe-connect-four"
license = "MIT"
keywords = ["connect-four"]
categories = ["game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
casual_logger = "0.6.5"
