[package]
name = "kifuwarabe_dynamic_programming"
version = "0.1.0"
authors = ["むずでょ <muzudho1@gmail.com>"]
edition = "2018"
description = """
WIP. Dynamic programming is Game AI.  
"""
readme = "README.md"
repository = "https://github.com/muzudho/kifuwarabe-dynamic-programming"
license = "MIT"
keywords = ["dynamic-programming"]
categories = ["game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
casual_logger = "0.6.5"
